--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,8 @@
                 "input": "src/theme/variables.css"
               }
             ],
-            "scripts": [
+            "scripts": [                        
+              "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
             ]
           },
