--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "@ionic/angular": "^6.1.13",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
     "ng-circle-progress": "^1.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -31,6 +32,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
